Tests/EndToEndTests/negative/missing-yield.dyva
subscript f(x, y) =
  if x do
    yield y
