Tests/EndToEndTests/negative/missing-yield.stderr
missing-yield.dyva:3.12: error: subscript must yield before returning
    yield y
           ^
